create github pages

--- a/page8.html
+++ b/page8.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
+  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -64,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rnxkn1AH" id="gallery1-a">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rnxkn1AH" id="gallery1-a">
 
     
 
