--- a/page2.html
+++ b/page2.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -63,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -84,7 +85,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DFPe6ybKTBwuLpa93iXiUwbtdxz883pCr/KcuyeUkZQAAvdu65Z/b5xJnffrSlmLhR9+UmJtCya0alwHitMoz8qVmZRg55Zm/dhGMQU742ecs2GaC1LRlbHZE1a/dvtj">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EqtQ6C3O0069rx9faI1F/H6Vu8U/Qg0MX3YdNA4sNyEq8Ae+fuiw1316LreiK35P77eOnAvP2EBsHkyOEPNiRdwitZWYyImVh86ZrVKVTbEur3iNWKWGvJsENKjrCy99">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
