--- a/page9.html
+++ b/page9.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
+  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -64,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rFujt8gq" id="gallery1-6">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rFujt8gq" id="gallery1-6">
 
     
 
