create github pages

--- a/page2.html
+++ b/page2.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -85,7 +85,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Jg4jMIeWdIHX4JJXayydbP0R7gdGu/FtjEQ+vBl65NP6SM1c5qGNZ/Z84tbfWwD3csmuX2qaJfQADMOmsgDJp0oWEeNCYTqQY2yOVWhnpizBvaGBerfU04T7Q2C9OYDA">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6NQI3Cv7hlim9dtTnNMr1tD/McVnrTEO7VJGqC9Dx4mwgyCqkYDMewMLNGE3kIHVAajUBjdRVU7dGf3uduIsESPmZ1OEp/O6Peqi4jOY7FYHmVA5NH7JGTmCbo2ItkP/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
