create github pages

--- a/page6.html
+++ b/page6.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rlK9670h" id="gallery1-6">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rlK9670h" id="gallery1-6">
 
     
 
